# darkcyan

./: .gitignore  .pre-commit-config.yaml  DarkCyan-yolo-trainer.ipynb  DarkCyan-yolo-v9-trainer.ipynb  LICENSE  README.md  app.py  coreml-test.py  filter_coco_dataset.py  log-example.py  pyproject.toml  receiver.sdp  requirements.txt  training_app.py
build_scripts/: build_opencv.sh  configure_opencv.py  raspberry_pi_deps.sh
darkcyan/: camera_process.py  camera_process_yolo.py  classify_data_utilities.py  common_data_utils.py  config.py  constants.py  coreml_proc.py  darkcyan_training_utils.py  detection_data_utilities.py  google_drive_utils.py  local_data_helpers.py  local_data_utility.py  local_data_utils.py  tools.py  yolo_proc.py
darkcyan_tools/: classify_data_utilities.py  detection_data_utilities.py  google_drive_utils.py  image_coord_utils.py  local_data_utils.py  training_utils.py
darkcyan_utils/: FPS.py  SignalMonitor.py
testing-app/: convert_yolo_to_coreml_ane.py
testing-app/backend/: server.py
testing-app/backend_multiproc/: README.md  __init__.py  config.py  messages.py  state.py  supervisor.py  worker.py
testing-app/frontend/: package-lock.json
testing-app/frontend/src/: App.tsx  Dashboard.tsx  Sparkline.tsx  VideoStream.tsx
