[tool.poetry]
name = "darkcyan-tools"
version = "0.1.0"
description = "Utilities and tooling for the ML darkcyan project"
authors = ["Chris <developer@harbour22.uk>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "darkcyan"}]



[tool.poetry.dependencies]
python = "^3.10"
enlighten = "^1.11.2"
blessed = "^1.20.0"
rich = "^13.3.5"
Pillow = "^9.5.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
