[tool.poetry]
name = "darkcyan"
version = "0.1.0"
description = "Darkcyan project, main runtime and associated tools"
authors = ["Chris <developer@harbour22.uk>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "darkcyan_tools"}, {include = "darkcyan"}]



[tool.poetry.dependencies]
python = "^3.10"
enlighten = "^1.11.2"
blessed = "^1.20.0"
rich = "^13.3.5"
Pillow = "^8.4.0"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
